unified-quant-platform/ultimate_app.log
  File "/root/.openclaw/workspace/unified-quant-platform/ultimate_integrated_app.py", line 377
    HTML_TEMPLATE = """
                    ^
SyntaxError: unterminated triple-quoted string literal (detected at line 1050)
